--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,30 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-   "version": "0.2.0",
-   "configurations": [
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Chemistry.NET.Tools.ElementsGenerator - launch",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Chemistry.NET.Tests/bin/Debug/netcoreapp3.1/Chemistry.NET.Tests.dll",
+            "preLaunchTask": "elementsGenerator-build",
+            "program": "${workspaceFolder}/Tools/Chemistry.NET.Tools.ElementsGenerator/bin/Debug/netcoreapp3.1/Chemistry.NET.Tools.ElementsGenerator.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Chemistry.NET.Tests",
-            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "cwd": "${workspaceFolder}/Tools/Chemistry.NET.Tools.ElementsGenerator",
             "console": "internalConsole",
             "stopAtEntry": false
         },
         {
-            "name": ".NET Core Attach",
+            "name": "Chemistry.NET.Tests - launch",
             "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
-        }
+            "request": "launch",
+            "preLaunchTask": "tests-build",
+            "program": "${workspaceFolder}/Chemistry.NET.Tests/bin/Debug/netcoreapp3.1/Chemistry.NET.Tests.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Chemistry.NET.Tests",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
     ]
 }
