--- a/Chemistry.NET/Chemistry.NET.csproj
+++ b/Chemistry.NET/Chemistry.NET.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0</Version>
     <Copyright>https://github.com/Sejoslaw/Chemistry.NET</Copyright>
     <PackageProjectUrl>https://github.com/Sejoslaw/Chemistry.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Sejoslaw/Chemistry.NET</RepositoryUrl>
