--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 3.1.300
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore Chemistry.NET/Chemistry.NET.csproj
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build Chemistry.NET/Chemistry.NET.csproj --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test Chemistry.NET.Tests/Chemistry.NET.Tests.csproj --no-restore --verbosity normal
