--- a/Chemistry.NET/Chemistry.NET.csproj
+++ b/Chemistry.NET/Chemistry.NET.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>1.1.0</Version>
+    <PackageId>Chemistry.NET</PackageId>
+    <Version>1.1.1</Version>
     <Copyright>https://github.com/Sejoslaw/Chemistry.NET</Copyright>
     <PackageProjectUrl>https://github.com/Sejoslaw/Chemistry.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Sejoslaw/Chemistry.NET</RepositoryUrl>
     <Authors>Krzysztof Dobrzyński</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <license>MIT</license>
   </PropertyGroup>
 
 </Project>
