--- a/Tools/Chemistry.NET.Tools.ElementStructureGenerator/Chemistry.NET.Tools.ElementStructureGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.ElementStructureGenerator/Chemistry.NET.Tools.ElementStructureGenerator.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+    <ProjectReference Include="..\..\Chemistry.NET\Chemistry.NET.csproj" />
+  </ItemGroup>
+
 </Project>
