--- a/Tools/Chemistry.NET.Tools.IsotopesGenerator/Chemistry.NET.Tools.IsotopesGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.IsotopesGenerator/Chemistry.NET.Tools.IsotopesGenerator.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
     <ProjectReference Include="..\..\Chemistry.NET\Chemistry.NET.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="83.0.4103.3900" />
-    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <PropertyGroup>
