--- a/Tools/Chemistry.NET.Tools.IonsGenerator/Chemistry.NET.Tools.IonsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.IonsGenerator/Chemistry.NET.Tools.IonsGenerator.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="83.0.4103.3900" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+  </ItemGroup>
+
 </Project>
