Added solution file and reorganized project structure;

--- a/Tools/Chemistry.NET.Tools.IsotopesGenerator/Chemistry.NET.Tools.IsotopesGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.IsotopesGenerator/Chemistry.NET.Tools.IsotopesGenerator.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+    <ProjectReference Include="..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
     <ProjectReference Include="..\..\Chemistry.NET\Chemistry.NET.csproj" />
   </ItemGroup>
 
@@ -12,7 +12,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
