--- a/Chemistry.NET/Chemistry.NET.csproj
+++ b/Chemistry.NET/Chemistry.NET.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageId>Chemistry.NET</PackageId>
     <Version>1.10.0</Version>
     <Copyright>https://github.com/Sejoslaw/Chemistry.NET</Copyright>
@@ -10,6 +10,7 @@
     <Authors>Krzysztof Dobrzyński</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <license>MIT</license>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
   
 </Project>
