--- a/Tools/Chemistry.NET.Tools.CommonCompoundsGenerator/Chemistry.NET.Tools.CommonCompoundsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.CommonCompoundsGenerator/Chemistry.NET.Tools.CommonCompoundsGenerator.csproj
@@ -4,12 +4,12 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="83.0.4103.3900" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+    <ProjectReference Include="..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
   </ItemGroup>
   
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
