--- a/Tools/Chemistry.NET.Tools.ElementStructureGenerator/Chemistry.NET.Tools.ElementStructureGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.ElementStructureGenerator/Chemistry.NET.Tools.ElementStructureGenerator.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+    <ProjectReference Include="..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
     <ProjectReference Include="..\..\Chemistry.NET\Chemistry.NET.csproj" />
   </ItemGroup>
 
