--- a/Tools/Chemistry.NET.Tools.ElementsGenerator/Chemistry.NET.Tools.ElementsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.ElementsGenerator/Chemistry.NET.Tools.ElementsGenerator.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+    <ProjectReference Include="..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
   </ItemGroup>
 
 </Project>
