--- a/Tools/Chemistry.NET.Tools.IonsGenerator/Chemistry.NET.Tools.IonsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.IonsGenerator/Chemistry.NET.Tools.IonsGenerator.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
+    <ProjectReference Include="..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
   </ItemGroup>
 
 </Project>
