--- a/Chemistry.NET/Chemistry.NET.csproj
+++ b/Chemistry.NET/Chemistry.NET.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <PackageId>Chemistry.NET</PackageId>
     <Version>1.10.0</Version>
     <Copyright>https://github.com/Sejoslaw/Chemistry.NET</Copyright>
@@ -11,6 +11,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <license>MIT</license>
     <LangVersion>9</LangVersion>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   
 </Project>
