--- a/Tools/Chemistry.NET.Tools.CommonCompoundsGenerator/Chemistry.NET.Tools.CommonCompoundsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.CommonCompoundsGenerator/Chemistry.NET.Tools.CommonCompoundsGenerator.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="83.0.4103.3900" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.7.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="109.0.5414.2500-beta" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Chemistry.NET.Tools.Common\Chemistry.NET.Tools.Common.csproj" />
@@ -9,7 +9,8 @@
   
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
 </Project>
