--- a/Tools/Chemistry.NET.Tools.ElementsGenerator/Chemistry.NET.Tools.ElementsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.ElementsGenerator/Chemistry.NET.Tools.ElementsGenerator.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="4.7.2" />
+    <PackageReference Include="System.Text.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
