--- a/Tools/Chemistry.NET.Tools.IonsGenerator/Chemistry.NET.Tools.IonsGenerator.csproj
+++ b/Tools/Chemistry.NET.Tools.IonsGenerator/Chemistry.NET.Tools.IonsGenerator.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="83.0.4103.3900" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.7.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="109.0.5414.2500-beta" />
   </ItemGroup>
 
   <ItemGroup>
